--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html {
   overflow-x: hidden !important;
   scroll-behavior: smooth;
   scroll-padding-top: 6rem;
+  width: 100vw;
 }
 
 ::-webkit-scrollbar {
